[gd_scene load_steps=8 format=3 uid="uid://caeddnc3vckc8"]

[ext_resource type="Script" path="res://world/jail.gd" id="1_f8bps"]
[ext_resource type="Texture2D" uid="uid://xpcirw22w2xk" path="res://assets/art/jail.png" id="1_ncfqx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyau4"]
size = Vector2(2, 22)

[sub_resource type="Animation" id="Animation_cha1n"]
resource_name = "shrink"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(0, 0, 29, 23), Rect2(0, 0, 29, 2)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"remove_area2d"
}]
}

[sub_resource type="Animation" id="Animation_q1gyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 29, 23)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmvtl"]
_data = {
"RESET": SubResource("Animation_q1gyq"),
"shrink": SubResource("Animation_cha1n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfamn"]
size = Vector2(32, 24)

[node name="Jail" type="Node2D"]
script = ExtResource("1_f8bps")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ncfqx")
centered = false
offset = Vector2(-14, -22)
region_enabled = true
region_rect = Rect2(0, 0, 29, 23)

[node name="WallLeft" type="StaticBody2D" parent="Sprite2D"]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/WallLeft"]
position = Vector2(-14, -11)
shape = SubResource("RectangleShape2D_cyau4")

[node name="WallRight" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(29, 0)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/WallRight"]
position = Vector2(-14, -11)
shape = SubResource("RectangleShape2D_cyau4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nmvtl")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_jfamn")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
